--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
     "            #create the column names synthetically, since the actual HTML table is organized with multiple col name levels\n",
     "            colnames = ['election_num', 'election_year', 'winner', 'winner_party', 'elec_coll_votes_count',\n",
     "                        'elec_coll_votes_tot','elec_coll_votes_perc', 'pop_votes_perc', 'pop_votes_perc_marg','pop_votes_count',\n",
-    "                        'pop_votes_count_marg','runner-up','runner-up_party','turnout']\n",
+    "                        'pop_votes_count_marg','runnerup','runnerup_party','turnout']\n",
     "            data += ','.join(colnames)+'\\n'\n",
     "            #obtain the rows of the table\n",
     "            list_rows = []\n",
@@ -341,7 +341,7 @@
     "    return data\n",
     "\n",
     "datasets['us_vote'] = {}\n",
-    "datasets['us_vote']['compare_hash'] = 'e11a68359a07461efccbb88f56e79f97e0beaf2b'\n",
+    "datasets['us_vote']['compare_hash'] = '1f505f91c81684a48dd631663b3ff8777600bf70'\n",
     "datasets['us_vote']['retrieve_data'] = retrieve_us_vote\n",
     "\n"
    ]
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
