added a note about historical vote data to retrieve_data.ipynb

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -277,7 +277,8 @@
     "- **Source:** [Wikipedia](https://wikipedia.org)\n",
     "- **Data URL:** https://en.wikipedia.org/wiki/List_of_United_States_presidential_elections_by_popular_vote_margin\n",
     "- **Date Accessed:** July 6, 2020\n",
-    "- **License:** None"
+    "- **License:** None\n",
+    "- **Further Instructions:** Right now, the wrangling chapter uses a few different versions of this data. These are stored in the `data/` folder under the name `historical_vote*.csv` but are not created from the `us_vote` data. These were not made reproducible because the intention is to move away from this US vote data shortly and replace with another dataset."
    ]
   },
   {
