Added instructions to retrieve data notebook for adding new data

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -16,12 +16,13 @@
     "Running all cells in this notebook will:\n",
     "\n",
     "1. obtain all data from their original sources\n",
-    "- validate the original data:\n",
-    "    - if the original does not exist in the repository already, a warning will be generated and the newly obtained data will be stored.\n",
-    "    - if the original data already exists and does not match with the newly downloaded data, a warning will be generated and the newly obtained data will be discarded.\n",
-    "- process the data into the format(s) required for generating the textbook\n",
-    "    - if a processed version of the data does not exist in the repository, a warning will be generated prior to storing the processed data.\n",
-    "    - if the processed data already exists and does not match with the newly processed data, a warning will be generated and the newly processed data will be discarded. "
+    "- process the raw data to create the clean copy\n",
+    "- check that the cleaned data matches with a stored hash\n",
+    "  - if it does not, a warning is raised to the user to possibly update the data, and the new data are stored in a temporary file for inspection\n",
+    "- check that the stored data in the `data/` folder matches the stored hash\n",
+    "  - if it does not, a warning is raised to check the stored data\n",
+    "  \n",
+    "In order to add a new dataset to this notebook, just create a new section in the same format as each section below (make sure it comes *before* the `Validate All Datasets` code block). You need to implement a `retrieve_[your_data_name]` function that builds a string representation of the dataset, store its hash using the `hash_data()` function. The `Validate All Datasets` code block at the end is responsible for looping over all the data and checking it."
    ]
   },
   {
