added brief mention of a note from Tans from mauna loa

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -416,7 +416,9 @@
     "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
     "- **Date Accessed:** July 7, 2020\n",
     "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
+    "- **License:** The authors have contacted Dr. Tans, who relayed the following information:\n",
+    "\n",
+    "> You are very welcome to use the CO2 data for your textbook. All data and graphs on our web pages are in the public domain. We only request that you mention us as the source.\n",
     "\n",
     "\n",
     "```\n",
