--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -82,7 +82,7 @@ Tidy data satisfy the following three criteria:
 - each column is a single variable, and
 - each value is a single cell (i.e., its row and column position in the data frame is not shared with another value)
 
-<img src="img/tidy.png", width="650">
+<img src="img/tidy.png" width="650">
 *image source: [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham*
 
 > **Definitions to know:**
