--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -2,7 +2,7 @@
 knitr::opts_chunk$set(message = FALSE)
 ```
 
-# Classification II: Evaluation & tuning {#classification_continued}
+# Classification II: evaluation & tuning {#classification_continued}
 
 ## Overview 
 This chapter continues the introduction to predictive modelling through classification. While the previous chapter
