--- a/index.Rmd
+++ b/index.Rmd
@@ -36,7 +36,7 @@ output:
 library(forcats)
 ```
 
-# Introduction to Data Science
+# R, Jupyter, and the tidyverse
 
 This is an open source textbook aimed at introducing undergraduate students to data science. It was originally written for the University of British Columbia's [DSCI 100 - Introduction to Data Science](https://ubc-dsci.github.io/dsci-100/) course. In this book, we define data science as the study and development of reproducible, auditable processes to obtain value (i.e., insight) from data. 
 
@@ -402,7 +402,3 @@ ggplot(vote_data, aes(x = med_income, y = med_prop_val, color = party)) +
   ylab("Median property value (USD)")
 ```
 
-
-### What's next?
-
-In the next chapter, we will dig in and spend more time learning how to load spreadsheet-like datasets of various formats into R, as well as how to scrape data from the web!
