--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -85,22 +85,20 @@ guide patient treatment.
 Our first step is to load, wrangle, and explore the data using visualizations
 in order to better understand the data we are working with.  We start by
 loading the necessary libraries for our analysis. Below you'll see (in addition
-to the usual `tidyverse`) two new libraries: `forcats` and `tidymodels`. 
+to the usual `tidyverse`) a new library: `forcats`. 
 The `forcats` library enables us to easily
 manipulate factors in R; factors are a special categorical type of variable in
-R that are often used for class label data. The `tidymodels` library, like the `tidyverse`, is actually a collection
-of a few different libraries that enable training
-classifiers (as well as other models that we'll see in later chapters). 
+R that are often used for class label data. 
 
 
 ```{r 05-load-libraries}
 library(tidyverse)
 library(forcats)
-library(tidymodels)
 ```
 
-In this case, the file containing the breast cancer data set is a simple `.csv` file with headers. We'll use the `read_csv` function with no additional arguments,
-and then the `head` function to inspect its contents:
+In this case, the file containing the breast cancer data set is a simple `.csv`
+file with headers. We'll use the `read_csv` function with no additional
+arguments, and then the `head` function to inspect its contents:
 
 ```{r 05-read-data}
 cancer <- read_csv("data/wdbc.csv")
@@ -109,29 +107,34 @@ head(cancer)
 
 **Variable descriptions**
 
-Breast tumours can be diagnosed by performing a *biopsy*, a process where tissue is removed from the body to diagnose the presence of a disease. Traditionally these procedures 
-were quite invasive; modern methods such as fine needle asipiration, used to collect the present data set, extract only a small amount of tissue and are less invasive. Based
-on a digital image of each breast tissue sample collected for this data set, 10 different variables were measured for each cell nucleus in the image (3-12 below), and then
-the mean of the three largest values for each variable across the nuclei was recorded. As part of the data preparation, these values have been *scaled*; we will discuss what this means 
-and why we do it later in this chapter. Each image additionally was given a unique ID and a diagnosis for malignance by a physician.
- Therefore, the total set of variables per image in this data set are:
+Breast tumours can be diagnosed by performing a *biopsy*, a process where
+tissue is removed from the body and examined for the presence of disease.
+Traditionally these procedures were quite invasive; modern methods such as fine
+needle asipiration, used to collect the present data set, extract only a small
+amount of tissue and are less invasive. Based on a digital image of each breast
+tissue sample collected for this data set, 10 different variables were measured
+for each cell nucleus in the image (3-12 below), and then the mean 
+ for each variable across the nuclei was recorded. As part of the
+data preparation, these values have been *scaled*; we will discuss what this
+means and why we do it later in this chapter. Each image additionally was given
+a unique ID and a diagnosis for malignance by a physician.  Therefore, the
+total set of variables per image in this data set are:
 
 
 1. ID number 
-2. Class - diagnosis (M = malignant, B = benign) 
-3. radius (mean of distances from center to points on the perimeter) 
-4. texture (standard deviation of gray-scale values) 
-5. perimeter 
-6. area 
-7. smoothness (local variation in radius lengths) 
-8. compactness ($perimeter^2 / area - 1.0$) 
-9. concavity (severity of concave portions of the contour) 
-10. concave points (number of concave portions of the contour) 
-11. symmetry 
-12. fractal dimension ($"coastline\: approximation" - 1$)
+2. Class: the diagnosis of **M**alignant or **B**enign
+3. Radius: the mean of distances from center to points on the perimeter
+4. Texture: the standard deviation of gray-scale values
+5. Perimeter: the length of the surrounding contour 
+6. Area: the area inside the contour
+7. Smoothness: the local variation in radius lengths
+8. Compactness: the ratio of squared perimeter and area
+9. Concavity: severity of concave portions of the contour 
+10. Concave Points: the number of concave portions of the contour
+11. Symmetry 
+12. Fractal Dimension 
 
-![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. Source: https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0](img/malignant_cancer.png  "A magnified image of a malignant breast fine needle aspiration.")
-
+![A magnified image of a malignant breast fine needle aspiration image. White lines denote the boundary of the cell nuclei. [Source](https://www.semanticscholar.org/paper/Breast-Cancer-Diagnosis-and-Prognosis-Via-Linear-P-Mangasarian-Street/3721bb14b16e866115c906336e9d70db096c05b9/figure/0)](img/malignant_cancer.png  "A magnified image of a malignant breast fine needle aspiration.")
 
 Below we use `glimpse` to preview the data frame. This function is similar to `head`, but can be easier to read when we have a lot of columns:
 
@@ -139,17 +142,25 @@ Below we use `glimpse` to preview the data frame. This function is similar to `h
 glimpse(cancer)
 ```
 
-We can see from the summary of the data above that `Class` is of type character (denoted by `<chr>`). Since we are going to be working with `Class` as a categorical statistical 
-variable, we will convert it to factor using the function `as.factor`.
+We can see from the summary of the data above that `Class` is of type character
+(denoted by `<chr>`). Since we are going to be working with `Class` as a
+categorical statistical variable, we will convert it to factor using the
+function `as_factor`.
 
 ```{r 05-class, echo = TRUE}
 cancer <- cancer %>% 
-  mutate(Class = as.factor(Class)) 
+  mutate(Class = as_factor(Class)) 
+glimpse(cancer)
 ```
 
-Factors have what are called "levels", which you can think of as categories. We can ask for the levels from the `Class` column by using the `levels` function. This function should return 
-the name of each category in that column. Given that we only have 2 different values in our `Class` column ("B" and "M"), we only expect to get two names back. If we had 4 different values 
-in the column, we would expect to get 4 back. *Note the use of `pull` to between `select` and `levels`. This is because `select` outputs a data frame (even though we only select a single column), and levels expects a vector. `pull` converts a single column of a data frame into a vector.*
+Factors have what are called "levels", which you can think of as categories. We
+can ask for the levels from the `Class` column by using the `levels` function.
+This function should return the name of each category in that column. Given
+that we only have 2 different values in our `Class` column (B and M), we
+only expect to get two names back.  Note that the `levels` function requires
+a *vector* argument, while the `select` function outputs a *data frame*; 
+so we use the `pull` function, which converts a single
+column of a data frame into a vector.
 
 ```{r 05-levels, echo = TRUE}
 cancer %>% 
@@ -160,7 +171,9 @@ cancer %>%
 
 **Exploring the data**
 
-Before we start doing any modelling, let's explore our data set. Below we use the `group_by` + `summarize` code pattern we used before to see that we have 357 (63\%) benign and 212 (37\%) malignant tumour observations.
+Before we start doing any modelling, let's explore our data set. Below we use
+the `group_by` + `summarize` code pattern we used before to see that we have
+357 (63\%) benign and 212 (37\%) malignant tumour observations.
 
 ```{r 05-tally}
 num_obs <- nrow(cancer)
@@ -170,26 +183,38 @@ cancer %>%
             percentage = n() / num_obs * 100)
 ```
 
-Next, let's draw a scatter plot to visualize the relationship between the perimeter and concavity variables. Rather than use `ggplot's` default palette, we define our own here (`cbPalette`) and pass it 
-as the `values` argument to the `scale_color_manual` function. We also make the category labels ("B" and "M") more readable by changing them to "Benign" and "Malignant" using the `labels` argument.
+Next, let's draw a scatter plot to visualize the relationship between the
+perimeter and concavity variables. Rather than use `ggplot's` default palette,
+we define our own here (`cbPalette`) and pass it as the `values` argument to
+the `scale_color_manual` function. We also make the category labels ("B" and
+"M") more readable by changing them to "Benign" and "Malignant" using the
+`labels` argument.
 
 ```{r 05-scatter, fig.height = 4, fig.width = 5}
 # colour palette
-cbPalette <- c("#56B4E9", "#E69F00","#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999") 
+cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999") 
 
 perim_concav <- cancer %>%  
   ggplot(aes(x = Perimeter, y = Concavity, color = Class)) + 
     geom_point(alpha = 0.5) +
     labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Benign", "Malignant"), values = cbPalette)
+    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette)
 perim_concav
 ```
 
-In this visualization, we can see that benign observations typically fall in the the lower left-hand side of the plot area. By contrast, malignant observations typically fall in upper right-hand side of 
-the plot. Suppose we obtain a new observation not in the current data set that has all the variables measured *except* the label (i.e., an image without the physician's diagnosis for the tumour class). We
-could compute the perimeter and concavity values, resulting in values of, say, 1 and 1. Could we use this information to classify that observation as benign or malignant? What about a new 
-observation with perimeter value of -1 and concavity value of -0.5? What about 0 and 1? It seems like the *prediction of an unobserved label* might be possible, based on our visualization. 
-In order to actually do this computationally in practice, we will need a classification algorithm; here we will use the K-nearest neighbour classification algorithm.
+In this visualization, we can see that malignant observations typically fall in
+the the upper right-hand corner of the plot area. By contrast, benign
+observations typically fall in lower left-hand corner of the plot. Suppose we
+obtain a new observation not in the current data set that has all the variables
+measured *except* the label (i.e., an image without the physician's diagnosis
+for the tumour class). We could compute the perimeter and concavity values,
+resulting in values of, say, 1 and 1. Could we use this information to classify
+that observation as benign or malignant? What about a new observation with
+perimeter value of -1 and concavity value of -0.5? What about 0 and 1? It seems
+like the *prediction of an unobserved label* might be possible, based on our
+visualization.  In order to actually do this computationally in practice, we
+will need a classification algorithm; here we will use the K-nearest neighbour
+classification algorithm.
 
 ## Classification with K-nearest neighbours
 
@@ -220,9 +245,14 @@ attrs <- c("Perimeter", "Concavity")
 my_distances <- table_with_distances(cancer[,attrs], new_point)
 neighbours <- cancer[order(my_distances$Distance),]
 ```
-To predict the label of a new observation, i.e., classify it as either benign or malignant, the K-nearest neighbour classifier generally finds the $K$ "nearest" or "most similar" 
-observations in our training set, and then uses their diagnoses to make a prediction for the new observation's diagnosis. To illustrate this concept, we will walk through an example.
-Suppose we have a new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]` (labelled in red on the scatterplot), whose diagnosis "Class" is unknown.
+To predict the label of a new observation, i.e., classify it as either benign
+or malignant, the K-nearest neighbour classifier generally finds the $K$
+"nearest" or "most similar" observations in our training set, and then uses
+their diagnoses to make a prediction for the new observation's diagnosis. To
+illustrate this concept, we will walk through an example.  Suppose we have a
+new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]` 
+(labelled in red on the scatterplot), whose diagnosis "Class" is
+unknown.
 
 <center>
 ```{r 05-knn-1, echo = FALSE, fig.height = 4, fig.width = 5}
@@ -231,8 +261,11 @@ perim_concav +
 ```
 </center>
 
-We see that the nearest point to this new observation is **malignant** and located at the coordinates (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). The idea here is that if 
-a point is close to another in the scatterplot, then the perimeter and concavity values are similar, and so we may expect that they would have the same diagnosis. 
+We see that the nearest point to this new observation is **malignant** and
+located at the coordinates (`r round(neighbours[1, c(attrs[1], attrs[2])],
+1)`). The idea here is that if a point is close to another in the scatterplot,
+then the perimeter and concavity values are similar, and so we may expect that
+they would have the same diagnosis. 
 
 <center>
 ```{r 05-knn-2, echo = FALSE, fig.height = 4, fig.width = 5}
@@ -253,9 +286,12 @@ my_distances <- table_with_distances(cancer[,attrs], new_point)
 neighbours <- cancer[order(my_distances$Distance),]
 ```
 
-Suppose we have another new observation with perimeter `r new_point[1]` and concavity of `r new_point[2]`. Looking at the scatterplot below, how would you classify this red observation? The 
-nearest neighbour to this new point is a **benign** observation at (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`). Does this seem like the right prediction to make? Probably not, 
-if you consider the other nearby points...
+Suppose we have another new observation with perimeter `r new_point[1]` and
+concavity of `r new_point[2]`. Looking at the scatterplot below, how would you
+classify this red observation? The nearest neighbour to this new point is a
+**benign** observation at (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`).
+Does this seem like the right prediction to make? Probably not, if you consider
+the other nearby points...
 
 <center>
 ```{r 05-knn-4, echo = FALSE, fig.height = 4, fig.width = 5}
@@ -269,9 +305,13 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
 ```
 </center>
 
-So instead of just using the one nearest neighbour, we can consider several neighbouring points, say $K = 3$, that are closest to the new red observation to predict its diagnosis class. Among those 3 closest 
-points, we use the *majority class* as our prediction for the new observation. In this case, we see that the diagnoses of 2 of the 3 nearest neighbours to our new 
-observation are malignant. Therefore we take majority vote and classify our new red observation as malignant. 
+So instead of just using the one nearest neighbour, we can consider several
+neighbouring points, say $K = 3$, that are closest to the new red observation
+to predict its diagnosis class. Among those 3 closest points, we use the
+*majority class* as our prediction for the new observation. In this case, we
+see that the diagnoses of 2 of the 3 nearest neighbours to our new observation
+are malignant. Therefore we take majority vote and classify our new red
+observation as malignant. 
 <!-- For our red observation at (`r new_point`), the nearest points are: (`r round(neighbours[1, c(attrs[1], attrs[2])], 1)`), (`r round(neighbours[2,  c(attrs[1], attrs[2])],1)`), and (`r round(neighbours[3, c(attrs[1], attrs[2])],1)`). -->
 
 <center>
@@ -299,12 +339,16 @@ perim_concav + geom_point(aes(x=new_point[1], y=new_point[2]),
 #  slice(1:3)
 ```
 
-Here we chose the $K=3$ nearest observations, but there is nothing special about $K=3$. We could have used $K=4, 5$ or more (though we may want to choose an odd number 
-to avoid ties). We will discuss more about choosing $K$ in the next chapter. 
+Here we chose the $K=3$ nearest observations, but there is nothing special
+about $K=3$. We could have used $K=4, 5$ or more (though we may want to choose
+an odd number to avoid ties). We will discuss more about choosing $K$ in the
+next chapter. 
 
 **Distance between points** 
 
-How do we decide which points are the $K$ "nearest" to our new observation? We can compute the distance between any pair of points using the following formula: 
+How do we decide which points are the $K$ "nearest" to our new observation? We
+can compute the distance between any pair of points using the following
+formula: 
 
 $$\mathrm{Distance} = \sqrt{(x_a -x_b)^2 + (y_a - y_b)^2}$$
 ```{r 05-multiknn-0, echo = FALSE}
@@ -313,18 +357,20 @@ new_point <- c(0,3.5)
 
 > This formula -- sometimes called the *Euclidean distance* -- is simply the straight line distance between two points on the x-y plane with coordinates $(x_a, y_a)$ and $(x_b, y_b)$.
 
-Suppose we want to classify a new observation with perimeter of `r new_point[1]` and concavity of `r new_point[2]`. Let's calculate the distances between our 
-new point and each of the observations in the training set to find the $K=5$ observations in the training data that are nearest to our new point. 
+Suppose we want to classify a new observation with perimeter of `r new_point[1]` and 
+concavity of `r new_point[2]`. Let's calculate the distances
+between our new point and each of the observations in the training set to find
+the $K=5$ observations in the training data that are nearest to our new point. 
 
 <center>
 ```{r 05-multiknn-1, echo = FALSE, fig.height = 4, fig.width = 5}
 perim_concav <- cancer %>%    
   ggplot(aes(x=Perimeter, y=Concavity, color = Class)) + 
-    geom_point() +
+    geom_point(alpha = 0.5) +
     scale_x_continuous(name = "Perimeter", breaks=seq(-2,4,1)) +
     scale_y_continuous(name = "Concavity", breaks=seq(-2,4,1)) +
     labs(color = "Diagnosis") + 
-    scale_color_manual(labels = c("Benign", "Malignant"), values = cbPalette) +
+    scale_color_manual(labels = c("Malignant", "Benign"), values = cbPalette) +
     geom_point(aes(x=new_point[1], y=new_point[2]), color=cbPalette[6], size = 2.5) 
 perim_concav
 ```
@@ -340,7 +386,9 @@ cancer %>% select(ID, Perimeter, Concavity, Class) %>%
   head(n = 5)
 ```
 
-From this, we see that 3 of the 5 nearest neighbours to our new observation are malignant so classify our new observation as malignant. We circle those 5 in the plot below:
+From this, we see that 3 of the 5 nearest neighbours to our new observation are
+malignant so classify our new observation as malignant. We circle those 5 in
+the plot below:
 
 <center>
 ```{r 05-multiknn-3, echo = FALSE}
@@ -359,7 +407,8 @@ k <- 5
 tab <- data.frame(neighbours[1:k,], cancer[order(my_distances$Distance),][1:k,c("ID","Class")])
 ```
 
-It can be difficult sometimes to read code as math, so here we mathematically show the calculation of distance for each of the 5 closest points.
+It can be difficult sometimes to read code as math, so here we mathematically
+show the calculation of distance for each of the 5 closest points.
 
 |Perimeter | Concavity | Distance          | Class          |
  |----------------- | -----------------    | ---------------| ----------------- |
@@ -395,7 +444,7 @@ plot_ly(x = ~ Perimeter,
           color = ~Class, 
           opacity = 0.4,
           size = 150,
-          colors = c(cbPalette[2], cbPalette[1])) %>% 
+          colors = c(cbPalette[1], cbPalette[2])) %>% 
     add_markers()  %>%
   layout(scene = list(xaxis = list(title = 'Perimeter'),
                      yaxis = list(title = 'Concavity'),
@@ -417,26 +466,46 @@ In order to classify a new observation using a K-nearest neighbour classifier, w
 
 ## K-nearest neighbours in R
 
-Coding the K-nearest neighbour algorithm in R ourselves would get complicated if we might have to predict the label/class for multiple new observations, or when there 
-are multiple classes and more than two variables. Thankfully, in R, the K-nearest neighbour algorithm is implemented in 
-the [`caret` package](https://topepo.github.io/caret/index.html) (**c**lassification **a**nd **re**gression **t**raining). The `caret` library 
-contains a set of tools to help make and use predictive models, such as classifiers. 
-Using this package will help keep our code simple, readable and accurate; the less we have to code ourselves, the less mistakes we are likely to make.
+Coding the K-nearest neighbour algorithm in R ourselves would get complicated
+if we might have to predict the label/class for multiple new observations, or
+when there are multiple classes and more than two variables. Thankfully, in R,
+the K-nearest neighbour algorithm is implemented in the [`tidymodels`
+package collection](https://www.tidymodels.org/). The `tidymodels` collection
+providestools to help make and use models, such as classifiers.  Using this package
+will help keep our code simple, readable and accurate; the less we have to code
+ourselves, the less mistakes we are likely to make. We start off by loading 
+`tidymodels`:
 
-We start off by loading the `caret` library:
-
-```{r 05-caret}
-library(caret)
+```{r 05-tidymodels}
+library(tidymodels)
 ```
 
-Let's again suppose we have a new observation with perimeter -1 and concavity 4.2, but its diagnosis is unknown (as in our example above). Suppose we again want to use the 
-perimeter and concavity explanatory variables/predictors to predict the diagnosis class of this observation. Let's pick out our 2 desired variables and store it as a 
-new dataset named `cancer_train`:
+Let's again suppose we have a new observation with perimeter -1 and concavity
+4.2, but its diagnosis is unknown (as in our example above). Suppose we again
+want to use the perimeter and concavity explanatory variables/predictors to
+predict the diagnosis class of this observation. Let's pick out our 2 desired
+variables and store it as a new dataset named `cancer_train`:
 
-```{r 05-caret-2}
+```{r 05-tidymodels-2}
 cancer_train <- cancer %>%
-  select("Perimeter", "Concavity")
+  select(Class, Perimeter, Concavity)
 head(cancer_train)
+```
+
+```{r 05-tidymodels-3}
+knn_spec <- nearest_neighbor() %>%
+       set_engine("kknn") %>%
+       set_mode("classification")
+
+knn_fit <- knn_spec %>%
+        fit(Class ~ ., data = cancer_train)
+
+knn_fit
+```
+
+```{r 05-predict}
+new_obs <- data.frame(Perimeter = -1, Concavity = 4.2)
+predict(knn_fit, new_obs)
 ```
 
 Next, we store the diagnosis class labels (column `Class`) as a vector:
